Scope style for review image

--- a/src/components/Reviews.html
+++ b/src/components/Reviews.html
@@ -66,3 +66,13 @@
     })
   }
 </script>
+<style>
+  .image-wrapper  { width: 250px; height:360px; position:relative;}
+  .image-big      { background: #fff; box-shadow: 6px 6px 7px 2px rgba(0,0,0,0.35);
+                       position:relative; width: 250px; max-height:360;}
+  .omtalt-bok     { width: 230px; max-height: 340px; border: 10px solid white;
+                       box-shadow: 5px 6px 7px 2px rgba(0,0,0,0.25); margin:auto;}
+  #omtale-bilde   { display: block; width: 230px; height: 320px; background:#fff; padding:10px;
+                       box-shadow: 1px 3px 10px 2px rgba(0,0,0,0.25);}
+  #inner-border   { padding: 20px; border:2px solid gray; background: #ddd; height:280px; text-align: center;}
+</style>
